--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.3.0",
+    "bcrypt": "^5.1.0",
+    "mongodb": "^5.3.0",
+    "next": "13.2.4",
+    "next-auth": "^4.21.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
